# llm-report

./: .gitignore  LICENSE  README.md  llm-report.default.toml  pixi.toml  pricing.anthropic.json  pricing.gemini.json  pricing.openai.json  pyproject.toml
.github/workflows/: ci.yml
src/llm_report/: __init__.py  __main__.py  aggregate.py  claude_collector.py  claude_sessions.py  cli.py  codex_collector.py  codex_db.py  codex_rollout.py  config.py  gemini_collector.py  gemini_sessions.py  models.py  pricing.py  report.py
tests/: test_aggregate.py  test_claude_collector.py  test_claude_sessions.py  test_cli.py  test_codex_collector.py  test_codex_db.py  test_codex_rollout.py  test_config.py  test_gemini_collector.py  test_gemini_sessions.py  test_pricing.py  test_report.py
tests/fixtures/: claude_session.jsonl  gemini_session.json  sample.jsonl
