[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-report"
version = "0.1.0"
description = "Aggregated usage statistics from LLM CLI sessions"
requires-python = ">=3.12"

[project.scripts]
llm-report = "llm_report.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
